# voplay

./: .gitignore  ARCHITECTURE.md  COMPLEX_GAMES.md  LICENSE  animation_runtime.vo  assets.vo  audio.vo  bytes.vo  collision.vo  color.vo  debug_overlay.vo  dev-notes.md  draw.vo  draw_protocol.vo  game.vo  host.vo  host_vogui.vo  input.vo  math.vo  perf_diagnostics.vo  perf_hud.vo  perf_packet.vo  perf_report.vo  perf_runtime.vo  perf_window.vo  render_worker.vo  res_proxy.vo  resources.vo  scene2d.vo  scene3d.vo  scheduler.vo  settings.vo  state.vo  tween.vo  ui.vo  vo.ext.toml  vo.mod  vo.web.json  vo.work
.github/workflows/: module-ci.yml
codec/: codec.vo
docs/: kart-racing-engine-plan.md  perf-diagnostics-final-design.md  primitive-rendering-architecture.md  renderer-architecture.md  track-asset-v1.md  voplay-final-rendering-capability-target.md
examples/empty_smoke/: main.vo  vo.mod  vo.work
examples/physics_stress/: main.vo
examples/primitive_smoke/: main.vo  vo.mod
examples/primitive_stress/: main.vo  vo.mod  vo.work
framewire/: framewire.vo
js/: bootstrap_webview.ts  index.ts  island_channel.ts  package-lock.json  package.json  render_bootstrap.ts  tsconfig.json  voplay-render-island.ts
primitive3d/: builder.vo  layer.vo  material_palette.vo  shape_registry.vo  stress.vo  types.vo
renderclock/: pacer.vo
rust/: Cargo.toml  build.rs
rust/examples/: test_shapes.rs
rust/src/: animation.rs  audio.rs  draw_list.rs  draw_protocol.rs  externs.rs  file_io.rs  font.rs  font_manager.rs  host_api.rs  impostor_baker.rs  input.rs  island_bindgen.rs  island_bindgen_contract.rs  lib.rs  material.rs  math3d.rs  model_loader.rs  native.rs  physics.rs  physics3d.rs  physics_command.rs  physics_registry.rs  pipeline2d.rs  pipeline3d.rs  pipeline3d_batches.rs  pipeline3d_material.rs  pipeline_depth.rs  pipeline_post.rs  pipeline_shadow.rs  pipeline_skybox.rs  pipeline_sprite.rs  primitive_pipeline.rs  primitive_scene.rs  primitives.rs  render_world.rs  renderer.rs  renderer_frame.rs  renderer_frame_resources.rs  renderer_perf.rs  renderer_runtime.rs  (+4 more)
rust/src/externs/: animation.rs  audio.rs  mod.rs  physics2d.rs  physics3d.rs  physics3d_externs.rs  render.rs  resource.rs  util.rs
rust/src/island_bindgen/: animation.rs  physics2d.rs  physics3d.rs  render.rs  resource.rs
rust/src/pipeline3d/: decal_submitter.rs  material_binder.rs  mesh_submitter.rs  pipeline_cache.rs  pipeline_factory.rs  primitive_submitter.rs  shader_library.rs  skinned_submitter.rs  terrain_submitter.rs  water_submitter.rs
rust/src/primitive_pipeline/: runtime.rs  tests.rs  texture_resolution.rs
rust/src/render_world/: skip_stats.rs  store.rs  tests.rs
rust/src/renderer/: backend_submit_pass.rs  depth_pass.rs  frame_2d_upload.rs  frame_decode.rs  frame_decode_runtime.rs  frame_graph_plan.rs  frame_orchestrator.rs  frame_orchestrator_runtime.rs  frame_pass_sequence.rs  frame_perf_finalize.rs  frame_submit.rs  frame_surface.rs  frame_transaction.rs  frame_transaction_builder.rs  frame_transaction_overlay.rs  frame_workload_plan.rs  main_opaque_pass.rs  main_transparent_pass.rs  overlay_pass.rs  pass_dispatch.rs  post_pass.rs  shadow_pass.rs  water_pass.rs
rust/src/renderer_frame/: frame_resource_ledger.rs  resource_backing.rs  resource_registry.rs  tests.rs
rust/src/renderer_frame/resource_registry/: target_store.rs  view_access.rs
rust/src/shaders/: mesh.wgsl  mesh_skinned.wgsl  mesh_terrain.wgsl  post.wgsl  shadow.wgsl  shape2d.wgsl  skybox.wgsl  sprite.wgsl
rust/src/stream/: reader.rs  tests.rs
scene2d/: anim_controller.vo  camera.vo  debug.vo  draw.vo  entity.vo  physics.vo  scene.vo  spatial.vo  sprite.vo  tilemap.vo
scene3d/: animation.vo  baked_primitive_layer.vo  blockkart_map.vo  blockkart_pack.vo  blockkart_primitives.vo  camera.vo  contact_event.vo  culling.vo  decal.vo  diagnostics.vo  draw.vo  impostor.vo  kart_controller.vo  kart_dynamics.vo  level.vo  lighting.vo  map.vo  map_runtime.vo  map_validation.vo  mesh_terrain.vo  particles.vo  physics.vo  physics_backend.vo  physics_commands.vo  physics_types.vo  physics_world.vo  pick.vo  presentation.vo  primitive_authoring.vo  primitive_layers.vo  primitives.vo  quality.vo  racing_camera.vo  racing_input.vo  render_sync.vo  replay.vo  scatter.vo  scene.vo  surface_material.vo  terrain.vo  (+19 more)
tests/: framewire_contract.vo  input_normalization.vo  main.vo  renderclock_contract.vo  third_person_camera_regression.vo  touch_input.vo  vo.mod
tests/core/: main.vo
tests/third_person_camera_regression/: main.vo
tools/: check_render_exposure.mjs  check_vehicle_telemetry_parity.mjs  perf_gate.mjs  primitive_stress.vo  racing_reference_demos.vo  vehicle_telemetry_parity.vo  verify_github_release.mjs
web-artifacts/: voplay_island.js  voplay_island_bg.wasm
