[package]
name = "vo-voplay"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "VoPlay game engine — Rust renderer + physics + input"

[package.metadata.vo]
vomod = "../vo.mod"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = ["dep:linkme", "dep:vo-ext", "dep:vo-ffi-macro", "dep:vo-runtime", "dep:vogui", "vo-ext/native", "vo-runtime/std", "vogui/native", "dep:pollster", "dep:raw-window-handle"]
wasm = ["dep:vo-ext", "dep:vo-ffi-macro", "dep:vo-runtime", "dep:vogui", "vogui/bindgen", "vo-ext/wasm", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys", "dep:js-sys", "dep:console_error_panic_hook"]
wasm-standalone = []
wasm-island = ["wasm"]

[dependencies]
wgpu = "24"
pollster = { version = "0.4", optional = true }
raw-window-handle = { version = "0.6", optional = true }
base64 = "0.22"
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp"] }
rapier2d = { version = "0.22", features = ["enhanced-determinism"] }
rapier3d = { version = "0.22", features = ["enhanced-determinism"] }
fontdue = "0.9"
gltf = { version = "1", features = ["extras"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

vo-ext       = { git = "https://github.com/vo-lang/volang", rev = "6bf8cbe3562feedfb3a67554d97745edc3e8c262", default-features = false, optional = true }
vo-ffi-macro = { git = "https://github.com/vo-lang/volang", rev = "6bf8cbe3562feedfb3a67554d97745edc3e8c262", optional = true }
vo-runtime   = { git = "https://github.com/vo-lang/volang", rev = "6bf8cbe3562feedfb3a67554d97745edc3e8c262", default-features = false, optional = true }

linkme       = { version = "0.3", optional = true }
vogui        = { git = "https://github.com/vo-lang/vogui", rev = "cf4d0163aed96f66747bdeb7d893f8efaccca1bb", default-features = false, optional = true }

wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys      = { version = "0.3", optional = true, features = [
    "Document", "Window", "Location", "HtmlCanvasElement", "Element", "DomRect",
    "KeyboardEvent", "PointerEvent", "MouseEvent", "WheelEvent", "EventTarget",
    "console",
] }
js-sys       = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[workspace]
